--- a/server/composer.json
+++ b/server/composer.json
@@ -2,6 +2,9 @@
     "require": {
         "cboden/ratchet": "^0.3.4"
     },
+    "require-dev": {
+        "phpunit/phpunit": "5.3.*"
+    },
 	"autoload": {
 		"psr-4": {
 			"App\\": "app/"
